--- a/index.css
+++ b/index.css
@@ -1,35 +1,93 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Space Grotesk", sans-serif;
 }
 
-body{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
+h1 {
+  font-family: "Anton", sans-serif;
+  font-weight: 5;
+}
+
+body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  flex-direction: column;
+}
+
+table,
+th,
+td {
+  border: 1px solid black;
+  border-collapse: collapse;
+}
+
+td,
+td {
+  height: 30px;
+  width: 100px;
+  font-size: 24px;
+  text-align: center;
+}
+
+button {
+  height: 40px;
+  width: 40%;
+  background-color: #60e1e0;
+  font-size: 20px;
+  font-weight: bold;
+  margin-top: 20px;
+  border-radius: 30px;
+  justify-content: center;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #60e1e0;
+}
+
+footer a {
+  margin: 0 10px;
+}
+
+footer img {
+  width: 30px;
+  height: auto;
+}
+
+@media screen and (max-width: 600px) {
+  body {
     flex-direction: column;
-}
+    padding: 20px;
+  }
 
-table, th, td{
-    border: 1px solid black;
-    border-collapse: collapse;
-}
+  td {
+    font-size: 16px;
+  }
 
-td, td{
-    height: 30px;
-    width: 100px;
-    font-size: 24px;
-    text-align: center;
-}
+  button {
+    width: 60%;
+  }
 
-button{
-    height: 40px;
-    width: 40%;
-    background-color: blue;
-    font-size: 20px;
-    font-weight: bold;
-    border-radius: 30px;
-    justify-content: center;
+  footer {
+    flex-direction: row;
+    align-items: center;
+  }
+
+  footer a {
+    margin: 0 10px;
+  }
+
+  footer img {
+    width: 20px;
+  }
 }
